--- a/gemini-tutorial-multiModal/index.html
+++ b/gemini-tutorial-multiModal/index.html
@@ -13,13 +13,15 @@
           }
         }
       </script>
+  <!-- type="module" で読み込む必要がある -->
   <script type="module" defer src="./gemini-multiModal.js"></script>
 </head>
 
 <body>
   <section>
     <form id="runForm">
-      <input type="text">
+      <p>プロンプト入力後に Shift + Enter キーまたは run ボタンを押下してください</p>
+      <textarea cols="30" rows="5"></textarea>
       <button id="submitBtn">run</button>
       <input type="file" accept="image/png, image/jpeg, image/jpg">
       <div class="thubnail"></div>
